ngrx nrwl set up

--- a/apps/music-store/src/app/app.component.html
+++ b/apps/music-store/src/app/app.component.html
@@ -1,4 +1,5 @@
-<header class="flex">
+<router-outlet></router-outlet> 
+<!--<header class="flex">
   <img
     alt="Nx logo"
     width="75"
@@ -108,4 +109,4 @@ ng affected:e2e
 </pre
     >
   </details>
-</main>
+</main>-->
